--- a/Pyspark/M4_StructuredData_DF.ipynb
+++ b/Pyspark/M4_StructuredData_DF.ipynb
@@ -17,7 +17,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyspark import SparkContext,SparkConf"
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession"
    ]
   },
   {
@@ -29,10 +30,13 @@
      "data": {
       "text/html": [
        "\n",
+       "            <div>\n",
+       "                <p><b>SparkSession - in-memory</b></p>\n",
+       "                \n",
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.65.134:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://192.168.65.139:4042\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -40,13 +44,15 @@
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>test</code></dd>\n",
+       "                <dd><code>clustername</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
+       "        \n",
+       "            </div>\n",
        "        "
       ],
       "text/plain": [
-       "<SparkContext master=local[*] appName=test>"
+       "<pyspark.sql.session.SparkSession at 0x7f65c0316a00>"
       ]
      },
      "execution_count": 3,
@@ -55,21 +61,8 @@
     }
    ],
    "source": [
-    "conf=SparkConf().setAppName(\"test\").setMaster(\"local[*]\")\n",
-    "sc=SparkContext(conf=conf)\n",
-    "sc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Note:\n",
-    "#Cluster name is test\n",
-    "#if i rerun the spark conf i will get error because of i can run only spark cluster\n",
-    "#so i need restart the kernel"
+    "spark=SparkSession.builder.master(\"local[*]\").appName(\"clustername\").getOrCreate()\n",
+    "spark"
    ]
   },
   {
@@ -78,45 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Note\n",
-    "#setMaster(\"local[4]\") is represents the core and here 4 core is using\n",
-    "#setMaster(\"local[*]\") is represents the core and here maximum number of core is using"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sc.defaultParallelism"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Don't run i don't have data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rdd=sc.textfile(\"filepath/data.gz\")"
+    "df=spark.read.text(\"https://drive.google.com/file/d/1QWEkAglwtQ_OlzK3Qo-4vsKJBCB85JXp/view?usp=drive_link\")\n",
+    "df"
    ]
   },
   {
