--- a/RDD/M1_CreatingDataFrame/M1_CreatingDataFrame.ipynb
+++ b/RDD/M1_CreatingDataFrame/M1_CreatingDataFrame.ipynb
@@ -2,49 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7adac5b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pyspark.sql import SparkSession\n",
-    "from pyspark.sql.types import StructType,StructField,StringType,IntegerType\n",
-    "\n",
-    "#Note :\n",
-    "#        Variables are PascalCase For ex : (StructType)\n",
-    "#        Methods are camelCase For ex : (printSchema)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "7a974395",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "tTnxD51Hod99",
+    "outputId": "12027c28-daa4-4ad6-c26d-3019033d36ca"
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23/07/02 08:28:28 WARN Utils: Your hostname, ZSCHN01LP0253L resolves to a loopback address: 127.0.1.1; using 192.168.1.6 instead (on interface wlp0s20f3)\n",
-      "23/07/02 08:28:28 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n"
+      "Collecting pyspark\n",
+      "  Downloading pyspark-3.5.3.tar.gz (317.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m317.3/317.3 MB\u001b[0m \u001b[31m3.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
+      "Building wheels for collected packages: pyspark\n",
+      "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+      "  Created wheel for pyspark: filename=pyspark-3.5.3-py2.py3-none-any.whl size=317840625 sha256=8ca9b7d22ff43b92e4e614a2423d263a9cbf2c3ce837704a36c7629b032e70a9\n",
+      "  Stored in directory: /root/.cache/pip/wheels/1b/3a/92/28b93e2fbfdbb07509ca4d6f50c5e407f48dce4ddbda69a4ab\n",
+      "Successfully built pyspark\n",
+      "Installing collected packages: pyspark\n",
+      "Successfully installed pyspark-3.5.3\n"
      ]
+    }
+   ],
+   "source": [
+    "!pip install pyspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 219
     },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23/07/02 08:28:28 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "23/07/02 08:28:29 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n"
-     ]
-    },
+    "id": "z6BmDYD5ofa9",
+    "outputId": "a2e07b70-421f-408c-e513-74223c4c8748"
+   },
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -55,15 +56,15 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://192.168.1.6:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://3e10107cb0b1:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
-       "                <dd><code>v3.3.2</code></dd>\n",
+       "                <dd><code>v3.5.3</code></dd>\n",
        "              <dt>Master</dt>\n",
        "                <dd><code>local[*]</code></dd>\n",
        "              <dt>AppName</dt>\n",
-       "                <dd><code>demo</code></dd>\n",
+       "                <dd><code>pyspark-shell</code></dd>\n",
        "            </dl>\n",
        "        </div>\n",
        "        \n",
@@ -71,7 +72,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f86bc1832e0>"
+       "<pyspark.sql.session.SparkSession at 0x7fc4660b6a70>"
       ]
      },
      "execution_count": 2,
@@ -80,63 +81,128 @@
     }
    ],
    "source": [
-    "#Creating Spark Session (It will executed in the Local, Not in the Master Node)\n",
-    "spark=SparkSession.builder.master(\"local[*]\").appName(\"demo\").getOrCreate()\n",
+    "import pyspark\n",
+    "from pyspark.sql import SparkSession\n",
+    "spark=SparkSession.builder.master(\"local[*]\").getOrCreate()\n",
     "spark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "dec47372",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "BPc_vb8SotfY",
+    "outputId": "7b412fb0-f4d0-484a-c7b6-c4d022218723"
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "DataFrame[firstname: string, middlename: string, lastname: string, id: int, gender: string]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-----+---+-------------+\n",
+      "| Name|Age|         City|\n",
+      "+-----+---+-------------+\n",
+      "| John| 28|     New York|\n",
+      "|Alice| 34|  Los Angeles|\n",
+      "|  Bob| 23|San Francisco|\n",
+      "+-----+---+-------------+\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "person_list = [(\"Berry\",\"\",\"Allen\",1,\"M\"),\n",
-    "        (\"Oliver\",\"Queen\",\"\",2,\"M\"),\n",
-    "        (\"Robert\",\"\",\"Williams\",3,\"M\"),\n",
-    "        (\"Tony\",\"\",\"Stark\",4,\"F\"),\n",
-    "        (\"Rajiv\",\"Mary\",\"Kumar\",5,\"F\")\n",
-    "]\n",
-    "#Creating The Schema For the Dataset\n",
-    "schema = StructType([ \\\n",
-    "        StructField(\"firstname\",StringType(),True), \\\n",
-    "        StructField(\"middlename\",StringType(),True), \\\n",
-    "        StructField(\"lastname\",StringType(),True), \\\n",
-    "        StructField(\"id\", IntegerType(), True),\\\n",
-    "        StructField(\"gender\", StringType(), True)])\n",
-    "#Creating Spark DataFrame\n",
-    "df = spark.createDataFrame(data=person_list,schema=schema)\n",
-    "df"
+    "data = [(\"John\", 28, \"New York\"),\n",
+    "        (\"Alice\", 34, \"Los Angeles\"),\n",
+    "        (\"Bob\", 23, \"San Francisco\")]\n",
+    "\n",
+    "# Define the schema (column names)\n",
+    "columns = [\"Name\", \"Age\", \"City\"]\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = spark.createDataFrame(data, schema=columns)\n",
+    "\n",
+    "# Show the DataFrame\n",
+    "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e6bce953",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "UhDY70GLpyi7",
+    "outputId": "05aff578-bc7a-4675-bd82-692808aa07c1"
+   },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
-      "                                                                                \r"
+      "root\n",
+      " |-- Name: string (nullable = true)\n",
+      " |-- Age: long (nullable = true)\n",
+      " |-- City: string (nullable = true)\n",
+      "\n"
      ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
     },
+    "id": "q76GMAkOsRVm",
+    "outputId": "902e205e-b6bf-44d4-a7d5-d04bba683b9a"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows=  5\n",
+      "Columns=  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Rows= \",df.count())\n",
+    "print(\"Columns= \",len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "2U_26lFjp3R2"
+   },
+   "outputs": [],
+   "source": [
+    "#Type 2\n",
+    "from pyspark.sql.types import StructType,StructField,StringType,IntegerType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "tMBZX4EQqQLa",
+    "outputId": "30f81436-e2bf-463a-fd44-85f2a2bfa2b1"
+   },
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -155,42 +221,36 @@
     }
    ],
    "source": [
-    "#Action\n",
+    "person_list = [(\"Berry\",\"\",\"Allen\",1,\"M\"),\n",
+    "        (\"Oliver\",\"Queen\",\"\",2,\"M\"),\n",
+    "        (\"Robert\",\"\",\"Williams\",3,\"M\"),\n",
+    "        (\"Tony\",\"\",\"Stark\",4,\"F\"),\n",
+    "        (\"Rajiv\",\"Mary\",\"Kumar\",5,\"F\")\n",
+    "]\n",
+    "\n",
+    "#Creating The Schema For the Dataset\n",
+    "schema = StructType([ \\\n",
+    "        StructField(\"firstname\",StringType(),True), \\\n",
+    "        StructField(\"middlename\",StringType(),True), \\\n",
+    "        StructField(\"lastname\",StringType(),True), \\\n",
+    "        StructField(\"id\", IntegerType(), True),\\\n",
+    "        StructField(\"gender\", StringType(), True)])\n",
+    "\n",
+    "#Creating Spark DataFrame\n",
+    "df = spark.createDataFrame(data=person_list,schema=schema)\n",
     "df.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c15c4656",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------+----------+--------+---+------+\n",
-      "|firstname|middlename|lastname|id |gender|\n",
-      "+---------+----------+--------+---+------+\n",
-      "|Berry    |          |Allen   |1  |M     |\n",
-      "|Oliver   |Queen     |        |2  |M     |\n",
-      "|Robert   |          |Williams|3  |M     |\n",
-      "|Tony     |          |Stark   |4  |F     |\n",
-      "|Rajiv    |Mary      |Kumar   |5  |F     |\n",
-      "+---------+----------+--------+---+------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.show(truncate=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4121d9e5",
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "id": "JwdMB1dcqbtJ",
+    "outputId": "b40bef9f-198f-4fa7-86ea-193bc86dcc18"
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -212,44 +272,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3716d325",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Rows=  5\n",
-      "Columns=  5\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Rows= \",df.count())\n",
-    "print(\"Columns= \",len(df.columns))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a5f5d749",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7eab30fe",
-   "metadata": {},
+   "metadata": {
+    "id": "0sZvf4zCqmxn"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "provenance": []
+  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -263,9 +299,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 1
 }
