--- a/RDD/M2_ReadingFiles/M1_ReadingFiles.ipynb
+++ b/RDD/M2_ReadingFiles/M1_ReadingFiles.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b1d49404",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b0ac7397",
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +84,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c4560b49",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b9c0ec8d",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8c06f9d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +143,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a04d808c",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +185,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6451cd89",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -199,7 +192,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d04bff3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -207,7 +199,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
