--- a/Pyspark_Master/M3_Amateur/M8_Week6_Duplicates_from_df.ipynb
+++ b/Pyspark_Master/M3_Amateur/M8_Week6_Duplicates_from_df.ipynb
@@ -54,6 +54,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9136e594",
+   "metadata": {},
+   "source": [
+    "Distinct is used to remove the duplicate records \n",
+    "It will not remove the subset of columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "098fd060",
@@ -81,6 +90,14 @@
    "outputs": [],
    "source": [
     "df.select(\"id\").distinct().show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89bc5b23",
+   "metadata": {},
+   "source": [
+    "drop duplicates = It will remove the duplicate subset of columns"
    ]
   },
   {
